--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "whitman",
   "version": "1.0.0",
   "description": "poetry and a view",
-  "main": "index.js",
+  "main": "public/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
