--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ node_modules/
 *.log
 *.gz
 
+# bower #
+#########
+bower_components/
+
 # OS generated files #
 ######################
 .DS_Store
