--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "description": "poetry and a view",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "underscore": "~1.8.3"
   }
 }
