--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Farhana Maredia",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.4.2"
+    "angular": "^1.4.2",
+    "underscore": "^1.8.3"
   }
 }
