--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "angular": "~1.4.2",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "jquery": "~2.1.4"
   }
 }
