--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "dependencies": {
     "angular": "~1.4.2",
-    "underscore": "~1.8.3",
-    "jquery": "~2.1.4"
+    "underscore": "~1.8.3"
   }
 }
